[package]
name = "styling"
version = "0.0.1"
authors = ["mahmoud_eltahawy gemmy9300@gmail.com"]
description = "state machine based css styling"
repository = "https://github.com/mahmoud-eltahawy/styling"
license.workspace = true
edition.workspace = true


[dependencies]
paste = "1.0.15"
simple_attr.workspace = true 
